# powermeal-ai-choice

./: Cargo.toml
src/: ai.rs  api.rs  main.rs  preferences.rs  serde.rs
