[package]
name = "powermeal-ai-choice"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.24.0"
reqwest = "0.12.7"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
eyre = "0.6.12"
chrono = { version = "0.4.38", features = ["serde"] }
dialoguer = "0.11.0"
